--- a/app/src/app.css
+++ b/app/src/app.css
@@ -1,41 +1,31 @@
-/*
- * Copyright 2017 The boardgame.io Authors.
- *
- * Use of this source code is governed by a MIT-style
- * license that can be found in the LICENSE file or at
- * https://opensource.org/licenses/MIT.
- */
-
-* {
-  box-sizing: content-box;
+.next-steps .fa-link {
+  margin-right: 5px;
 }
 
-.content {
-  padding: 50px;
+/* Fix for use only flexbox in content area */
+.next-steps .row {
+  margin-bottom: 0;
 }
 
-.runner {
+.next-steps .col-md-5 {
+  margin-bottom: 3rem;
+}
+
+@media (max-width: 768px) {
+  .next-steps .col-md-5 {
+    margin-bottom: 0;
+  }
+}
+
+.spinner {
+  position: absolute;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 100%;
-}
-
-a:hover {
-  color: #555;
-}
-
-a.active {
-  color: #333;
-  font-weight: bold;
-}
-
-.runner .run {
-  text-align: center;
-}
-
-.logo {
-  max-width: 120px;
-  max-height: 120px;
-  margin-top: 10px;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
